[package]
name = "unnamed_entity"
version = "0.1.10"
edition = "2024"
categories = ["data-structures"]
license = "MIT OR Apache-2.0"
description = "Strongly-typed indexing for vectors and other structures"
repository = "https://github.com/wanda-phi/unnamed-entity/"

[dependencies]
indexmap = { version = "2.0.0", optional = true }
bitvec = { version = "1.0.1", optional = true }
serde = { version = "1.0.188", optional = true, features = ["derive"] }
bincode = { version = "2.0.1", optional = true }

[features]
map = ["dep:indexmap"]
bitvec = ["dep:bitvec"]
serde = ["dep:serde", "indexmap?/serde", "bitvec?/serde"]
bincode = ["dep:bincode"]
